# rrh2

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yaml  update-version.yaml
assets/bash/: _cdrrh  cdrrh  rrhfzf  rrhpeco
assets/zsh/: _cdrrh  cdrrh  rrhfzf  rrhpeco
src/: alias.rs  cli.rs  commands.rs  config.rs  db.rs  entities.rs  external.rs  main.rs  terminal.rs  utils.rs
src/commands/: add.rs  alias.rs  config.rs  exec.rs  export.rs  group.rs  init.rs  list.rs  prune.rs  repository.rs
src/commands/export/: common.rs  json.rs  pkl.rs  yaml.rs
src/db/: jsondb.rs
testdata/: config.json  config.pkl  database.json
testdata/fibonacci/: .gitignore  README.md  fibonacci.go
